[package]
name = "sled_test"
version = "0.1.0"
authors = ["Rick Richardson <rick.richardson@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.2"
futures = "0.3.13"
serde = "1.0.125"
sled = { git="https://github.com/spacejam/sled", branch="main" }
tokio = { version="1.4.0", features=["full"] }
